added cdn for p5js

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Corona Simulation</title>
 </head>
-<body>
-    
+<style>
+    *,html,body{
+        margin: 0;
+        padding: 0;
+    }
+    canvas{
+        overflow-y: hidden;
+        scroll-behavior: smooth;
+    }
+</style>
+<body>    
 </body>
-<!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script> -->
-<script src="./lib/p5.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
+<!-- <script src="./lib/p5.min.js"></script> -->
 <script src="index.js"></script>
+<script src="ParticleSystem.js"></script>
+<script src="Particle.js"></script>
 </html>
