--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
 <!-- <script src="./lib/p5.min.js"></script> -->
-<script src="index.js"></script>
+<script src="main.js"></script>
 <script src="Population.js"></script>
 <script src="Person.js"></script>
 </html>
