--- a/index.html
+++ b/index.html
@@ -20,12 +20,31 @@
         scroll-behavior: smooth;
         display: inline;
     }
+    input{
+        margin-left: 5px;
+        width: 8%;
+        border: 1px solid grey;
+        height: 1.2rem;
+        padding: 3px;
+        border-radius: 5px;
+    }
+    #start{
+        background-color: tomato;
+        height: auto;
+        width: auto;
+    }
 </style>
 <body>
-    <div style="position: absolute;top: 5px;width:100%;">
-        <label style="color: white;font-weight: bolder;">persons radius :</label><input id="radius" title="persons radius" placeholder="persons radius" type="number" style="margin-left: 5px;width: 8%;"/>
-        <label style="color: white;font-weight: bolder;">population :</label><input id="population" title="population" placeholder="population" type="number" style="margin-left: 5px;width: 8%;"/>
-        <label style="color: white;font-weight: bolder;">infection % :</label><input id="infection" title="infection %" placeholder="infection %" type="number" style="margin-left: 5px;width: 8%;"/>
+    <div style="position: absolute;top: 5px;width:50%;">
+        <label style="color: white;font-weight: bolder;">persons radius :</label>
+        <input id="radius" title="persons radius" placeholder="persons radius" type="number"/>
+        <label style="color: white;font-weight: bolder;">population :</label>
+        <input id="population" title="population" placeholder="population" type="number"/>
+        <label style="color: white;font-weight: bolder;">infection % :</label>
+        <input id="infection" title="infection %" placeholder="infection %" type="number"/>
+        <hr>
+        <label style="color: white;font-weight: bolder;width: 20px;">stay home</label>
+        <input id="home" title="stay home" type="checkbox"/>
         <input id="start" type="button" value="start"/>
     </div>
 </body>
