--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         <label style="color: white;font-weight: bolder;">infection % :</label>
         <input id="infection" title="infection %" placeholder="infection %" type="number"/>
         <hr>
+        <label style="color: white;font-weight: bolder;">recovery days :</label>
+        <select id="reco">
+            <option value="1">1 days</option>
+            <option value="2">2 days</option>
+            <option value="5">5 days</option>
+            <option value="10">10 days</option>
+            <option value="15">15 days</option>
+            <option value="none">No Recovery</option>
+        </select>
         <label style="color: white;font-weight: bolder;width: 20px;">stay home</label>
         <input id="home" title="stay home" type="checkbox"/>
         <input id="start" type="button" value="start"/>
