--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <option value="5">5 days</option>
             <option value="10">10 days</option>
             <option value="15">15 days</option>
-            <option value="none">No Recovery</option>
+            <option selected value="none">No Recovery</option>
         </select>
         <label style="color: white;font-weight: bolder;width: 20px;">stay home</label>
         <input id="home" title="stay home" type="checkbox"/>
